--- a/docker/local-c2/docker-compose.yml
+++ b/docker/local-c2/docker-compose.yml
@@ -102,6 +102,7 @@ services:
       SCHEMAREGISTRY_URL: "http://schema_registry:3502"
       PROXY: "true"
 
+  # Uses the schemas in the local folder. Optionally, ignore this for now.
   bootstrapper:
     image: drivereu/silent-producer:latest
     hostname: bootstrapper
@@ -111,11 +112,10 @@ services:
     environment:
       KAFKA_HOST: broker:9092
       SCHEMA_REGISTRY: http://schema_registry:3502
-      PRODUCE_TOPICS: simulation_entity_item,simulation_time_mgmt,system_topic_access_invite,simulation_request_startinject,simulation_entity_post,standard_named_geojson,system_heartbeat,system_logging
-      # simulation_request_transport,lcms_plots,simulation_affected_area,simulation_sumo_configuration,standard_cap,chain_power,chain_care,chain_flood,chain,flood_prediction_geojson,flood_actual,system_timing
+      PRODUCE_TOPICS: simulation_entity_item,simulation_time_mgmt,system_topic_access_invite,simulation_request_startinject,simulation_entity_post,standard_named_geojson,system_heartbeat,system_logging,system_request_change_of_trial_stage,system_tm_phase_message,system_tm_role_player,simulation_session_mgmt,standard_cap,send_file,send_message,named_json,simulation_request_startinject,cbrn_geojson,chemical_incident,resource,simulation_entity_featurecollection,parking
     restart: on-failure
     volumes:
-      - ./schemas:/src/schemas
+      - ./schemas:/app/src/schemas
 
   time_service:
     image: drivereu/test-bed-time-service:latest
@@ -132,6 +132,7 @@ services:
       KAFKA_BROKER_URL: broker:9092
       SCHEMA_REGISTRY_URL: http://schema_registry:3502
       AUTO_REGISTER_SCHEMAS: "true"
+    restart: on-failure
 
   large_file_service:
     image: drivereu/large-file-service:latest
@@ -141,15 +142,12 @@ services:
       - schema_registry
     ports:
       - "9090:9090"
-    networks:
-      - default
-      - backend
     environment:
       HOST: localhost
       PORT: 9090
 
   trial_management_tool:
-    image: drivereu/trial-management-tool:latest
+    image: strategyeu/trial-management-tool:test_image
     depends_on:
       - broker
       - schema_registry
@@ -163,7 +161,8 @@ services:
       KAFKA_HOST: broker:9092
       SCHEMA_REGISTRY: http://schema_registry:3502
       TRIAL_MANAGER_SERVER_PORT: 3210
-      PRODUCE: simulation_session_mgmt,simulation_time_control,simulation_time_mgmt,simulation_entity_post,system_tm_role_player,system_request_change_of_trial_stage,system_tm_phase_message,system_large_data_update
+      SERVER: "http://localhost/tmt"
+      PRODUCE: system_request_change_of_trial_stage,system_tm_phase_message,system_tm_role_player,simulation_session_mgmt,standard_cap,simulation_entity_post,send_file,send_message,named_json,simulation_request_startinject,cbrn_geojson,chemical_incident,resource,simulation_entity_featurecollection
       # SSL: "false"
       # SSL_PFX: certs/TB-TrialMgmt.p12
       # SSL_PASSPHRASE: changeit
@@ -171,35 +170,63 @@ services:
     volumes:
       - trial-data:/app/trials
 
-  # homepage:
-  #   image: strategyeu/homepage:latest
-  #   depends_on:
-  #     - broker
-  #     - schema_registry
-  #   ports:
-  #     - 80:80
-  #     - 443:443 # When running in production, turn it on
-  #   environment:
-  #     hostname: localhost
-  #     title: STRATEGY
-  #     email: erik.vullings@tno.nl
-  #     # ssl: true  # When running in production, and you want to use letsencrypt to get the certificates.
-  #     tmt: trial_management_tool:3210
-  #     mail: webmail:80
-  #     mailapi: mailmonitor:4200
-  #     lfs: large_file_service:9090
-  #     time: time_service:8100
-  #     schemas: kafka_schema_registry_ui:8000
-  #     topics: kafka_topics_ui:8000
-  #   volumes:
-  #     - certs:/usr/src/app/certs # For saving the letsencrypt certificates
+  # This is a reverse proxy: if it doesn't run in combination with nginx,
+  # we will ignore it for now.
+  # Use the INTERNAL port number for redirect!
+  homepage:
+    image: strategyeu/homepage:latest
+    depends_on:
+      - broker
+      - schema_registry
+    ports:
+      - 80:80
+      - 443:443 # When running in production, turn it on
+    environment:
+      hostname: localhost
+      title: STRATEGY
+      email: erik.vullings@tno.nl
+      # ssl: true  # When running in production, and you want to use letsencrypt to get the certificates.
+      tmt: trial_management_tool:3210/tmt
+      webmail: webmail:80
+      mailgateway: mailgateway:7891/mailgateway
+      mailmonitor: mailmonitor:80/mailmonitor
+      lfs: large_file_service:9090
+      time: time_service:8100/time
+      schemas: kafka_schema_registry_ui:8000
+      topics: kafka_topics_ui:8000
+    volumes:
+      - certs:/usr/src/app/certs # For saving the letsencrypt certificates
+
+  #  nginx-proxy:
+  #    image: 'jc21/nginx-proxy-manager:latest'
+  #    restart: unless-stopped
+  #    ports:
+  #      # These ports are in format <host-port>:<container-port>
+  #      #- '80:80' # Public HTTP Port
+  #      #- '443:443' # Public HTTPS Port
+  #      #- '81:81' # Admin Web Port
+  #      # Add any other Stream port you want to expose
+  #      # - '21:21' # FTP
+  #
+  #    # Uncomment the next line if you uncomment anything in the section
+  #    environment:
+  #      # Uncomment this if you want to change the location of
+  #      # the SQLite DB file within the container
+  #      # DB_SQLITE_FILE: "/data/database.sqlite"
+  #
+  #      # Uncomment this if IPv6 is not enabled on your host
+  #      DISABLE_IPV6: 'true'
+  #
+  #    volumes:
+  #      - ./data:/data
+  #      - ./letsencrypt:/etc/letsencrypt
 
   kafdrop:
     image: obsidiandynamics/kafdrop:latest
     depends_on:
       - broker
     ports:
-      - 9000:9000
+      - 7000:9000
     environment:
       hostname: kafdrop
       KAFKA_BROKERCONNECT: broker:9092
@@ -209,122 +236,127 @@ services:
       CMD_ARGS: "--message.format=AVRO"
 
   mailserver:
-    image: drivereu/driver-mailserver
+    image: drivereu/driver-mailserver:latest
     depends_on:
       - broker
       - schema_registry
-    hostname: ${HOSTNAME}
-    domainname: ${DOMAINNAME}
-    container_name: ${CONTAINER_NAME}
-    ports:
-      - "25:25"
-      - "143:143"
-      - "587:587"
-      - "993:993"
-      - "3000:3000"
-    networks:
-      static-network:
-        ipv4_address: 10.5.0.5
-      default:
-      backend:
+    hostname: dockermail
+    domainname: drivereu.com
+    container_name: mailserver
+    #    ports:
+    #      - "25:25"
+    #      - "143:143"
+    #      - "587:587"
+    #      - "993:993"
+    #      - "3000:3000"
     volumes:
       - maildata:/var/mail
       - mailstate:/var/mail-state
-      - mailconfig/:/tmp/docker-mailserver/
+      - mailconfig:/tmp/docker-mailserver/
     environment:
-      - DMS_DEBUG=${DMS_DEBUG}
-      - ENABLE_CLAMAV=${ENABLE_CLAMAV}
-      - ONE_DIR=${ONE_DIR}
-      - ENABLE_POP3=${ENABLE_POP3}
-      - ENABLE_FAIL2BAN=${ENABLE_FAIL2BAN}
-      - ENABLE_MANAGESIEVE=${ENABLE_MANAGESIEVE}
-      - OVERRIDE_HOSTNAME=${OVERRIDE_HOSTNAME}
-      - POSTMASTER_ADDRESS=${POSTMASTER_ADDRESS}
-      - POSTSCREEN_ACTION=${POSTSCREEN_ACTION}
-      - REPORT_RECIPIENT=${REPORT_RECIPIENT}
-      - REPORT_SENDER=${REPORT_SENDER}
-      - REPORT_INTERVAL=${REPORT_INTERVAL}
-      - SMTP_ONLY=${SMTP_ONLY}
-      - SSL_TYPE=${SSL_TYPE}
-      - TLS_LEVEL=${TLS_LEVEL}
-      - SPOOF_PROTECTION=${SPOOF_PROTECTION}
-      - ENABLE_SRS=${ENABLE_SRS}
-      - PERMIT_DOCKER=${PERMIT_DOCKER}
-      - VIRUSMAILS_DELETE_DELAY=${VIRUSMAILS_DELETE_DELAY}
-      - ENABLE_POSTFIX_VIRTUAL_TRANSPORT=${ENABLE_POSTFIX_VIRTUAL_TRANSPORT}
-      - POSTFIX_DAGENT=${POSTFIX_DAGENT}
-      - POSTFIX_MAILBOX_SIZE_LIMIT=${POSTFIX_MAILBOX_SIZE_LIMIT}
-      - POSTFIX_MESSAGE_SIZE_LIMIT=${POSTFIX_MESSAGE_SIZE_LIMIT}
-      - ENABLE_SPAMASSASSIN=${ENABLE_SPAMASSASSIN}
-      - SA_TAG=${SA_TAG}
-      - SA_TAG2=${SA_TAG2}
-      - SA_KILL=${SA_KILL}
-      - SA_SPAM_SUBJECT=${SA_SPAM_SUBJECT}
-      - ENABLE_FETCHMAIL=${ENABLE_FETCHMAIL}
-      - FETCHMAIL_POLL=${FETCHMAIL_POLL}
-      - ENABLE_LDAP=${ENABLE_LDAP}
-      - LDAP_START_TLS=${LDAP_START_TLS}
-      - LDAP_SERVER_HOST=${LDAP_SERVER_HOST}
-      - LDAP_SEARCH_BASE=${LDAP_SEARCH_BASE}
-      - LDAP_BIND_DN=${LDAP_BIND_DN}
-      - LDAP_BIND_PW=${LDAP_BIND_PW}
-      - LDAP_QUERY_FILTER_USER=${LDAP_QUERY_FILTER_USER}
-      - LDAP_QUERY_FILTER_GROUP=${LDAP_QUERY_FILTER_GROUP}
-      - LDAP_QUERY_FILTER_ALIAS=${LDAP_QUERY_FILTER_ALIAS}
-      - LDAP_QUERY_FILTER_DOMAIN=${LDAP_QUERY_FILTER_DOMAIN}
-      - DOVECOT_TLS=${DOVECOT_TLS}
-      - DOVECOT_USER_FILTER=${DOVECOT_USER_FILTER}
-      - DOVECOT_PASS_FILTER=${DOVECOT_PASS_FILTER}
-      - ENABLE_POSTGREY=${ENABLE_POSTGREY}
-      - POSTGREY_DELAY=${POSTGREY_DELAY}
-      - POSTGREY_MAX_AGE=${POSTGREY_MAX_AGE}
-      - POSTGREY_AUTO_WHITELIST_CLIENTS=${POSTGREY_AUTO_WHITELIST_CLIENTS}
-      - POSTGREY_TEXT=${POSTGREY_TEXT}
-      - ENABLE_SASLAUTHD=${ENABLE_SASLAUTHD}
-      - SASLAUTHD_MECHANISMS=${SASLAUTHD_MECHANISMS}
-      - SASLAUTHD_MECH_OPTIONS=${SASLAUTHD_MECH_OPTIONS}
-      - SASLAUTHD_LDAP_SERVER=${SASLAUTHD_LDAP_SERVER}
-      - SASLAUTHD_LDAP_SSL=${SASLAUTHD_LDAP_SSL}
-      - SASLAUTHD_LDAP_BIND_DN=${SASLAUTHD_LDAP_BIND_DN}
-      - SASLAUTHD_LDAP_PASSWORD=${SASLAUTHD_LDAP_PASSWORD}
-      - SASLAUTHD_LDAP_SEARCH_BASE=${SASLAUTHD_LDAP_SEARCH_BASE}
-      - SASLAUTHD_LDAP_FILTER=${SASLAUTHD_LDAP_FILTER}
-      - SASLAUTHD_LDAP_START_TLS=${SASLAUTHD_LDAP_START_TLS}
-      - SASLAUTHD_LDAP_TLS_CHECK_PEER=${SASLAUTHD_LDAP_TLS_CHECK_PEER}
-      - SASL_PASSWD=${SASL_PASSWD}
-      - SRS_EXCLUDE_DOMAINS=${SRS_EXCLUDE_DOMAINS}
-      - SRS_SECRET=${SRS_SECRET}
-      - DEFAULT_RELAY_HOST=${DEFAULT_RELAY_HOST}
-      - RELAY_HOST=${RELAY_HOST}
-      - RELAY_PORT=${RELAY_PORT}
-      - RELAY_USER=${RELAY_USER}
-      - RELAY_PASSWORD=${RELAY_PASSWORD}
+      - DMS_DEBUG=1
+      - ENABLE_CLAMAV=0
+      - ONE_DIR=0
+      - ENABLE_POP3=
+      - ENABLE_FAIL2BAN=0
+      - ENABLE_MANAGESIEVE=
+      - OVERRIDE_HOSTNAME=
+      - POSTMASTER_ADDRESS=
+      - POSTSCREEN_ACTION=enforce
+      - REPORT_RECIPIENT=0
+      - REPORT_SENDER=
+      - REPORT_INTERVAL=daily
+      - SMTP_ONLY=
+      - SSL_TYPE=
+      - TLS_LEVEL=
+      - SPOOF_PROTECTION=
+      - ENABLE_SRS=0
+      - PERMIT_DOCKER=
+      - VIRUSMAILS_DELETE_DELAY=
+      - ENABLE_POSTFIX_VIRTUAL_TRANSPORT=
+      - POSTFIX_DAGENT=
+      - POSTFIX_MAILBOX_SIZE_LIMIT=
+      - POSTFIX_MESSAGE_SIZE_LIMIT=
+      - ENABLE_SPAMASSASSIN=0
+      - SA_TAG=2.0
+      - SA_TAG2=6.31
+      - SA_KILL=6.31
+      - SA_SPAM_SUBJECT=***SPAM*****
+      - ENABLE_FETCHMAIL=0
+      - FETCHMAIL_POLL=300
+      - ENABLE_LDAP=
+      - LDAP_START_TLS=
+      - LDAP_SERVER_HOST=
+      - LDAP_SEARCH_BASE=
+      - LDAP_BIND_DN=
+      - LDAP_BIND_PW=
+      - LDAP_QUERY_FILTER_USER=
+      - LDAP_QUERY_FILTER_GROUP=
+      - LDAP_QUERY_FILTER_ALIAS=
+      - LDAP_QUERY_FILTER_DOMAIN=
+      - DOVECOT_TLS=
+      - DOVECOT_USER_FILTER=
+      - DOVECOT_PASS_FILTER=
+      - ENABLE_POSTGREY=0
+      - POSTGREY_DELAY=300
+      - POSTGREY_MAX_AGE=35
+      - POSTGREY_AUTO_WHITELIST_CLIENTS=5
+      - POSTGREY_TEXT=Delayed by postgrey
+      - ENABLE_SASLAUTHD=0
+      - SASLAUTHD_MECHANISMS=
+      - SASLAUTHD_MECH_OPTIONS=
+      - SASLAUTHD_LDAP_SERVER=
+      - SASLAUTHD_LDAP_SSL=
+      - SASLAUTHD_LDAP_BIND_DN=
+      - SASLAUTHD_LDAP_PASSWORD=
+      - SASLAUTHD_LDAP_SEARCH_BASE=
+      - SASLAUTHD_LDAP_FILTER=
+      - SASLAUTHD_LDAP_START_TLS=
+      - SASLAUTHD_LDAP_TLS_CHECK_PEER=
+      - SASL_PASSWD=
+      - SRS_EXCLUDE_DOMAINS=
+      - SRS_SECRET=
+      - DEFAULT_RELAY_HOST=
+      - RELAY_HOST=
+      - RELAY_PORT=
+      - RELAY_USER=
+      - RELAY_PASSWORD=
     cap_add:
       - NET_ADMIN
       - SYS_PTRACE
     restart: always
 
   webmail:
-    image: drivereu/driver-roundcube
+    image: drivereu/driver-roundcube:latest
     hostname: webmail
     container_name: webmail
     environment:
-      - ROUNDCUBEMAIL_DEFAULT_HOST=10.5.0.5
-      - ROUNDCUBEMAIL_SMTP_SERVER=10.5.0.5
+      - ROUNDCUBEMAIL_DEFAULT_HOST=dockermail
+      - ROUNDCUBEMAIL_SMTP_SERVER=dockermail
       - ROUNDCUBEMAIL_DEFAULT_PORT=143
       - ROUNDCUBEMAIL_SMTP_PORT=25
-    ports:
-      - "3080:80"
-    networks:
-      static-network:
-        ipv4_address: 10.5.0.6
-      default:
-      backend:
+      - REFRESH_TIME=5
+    #    ports:
+    #      - "4201:80"
     depends_on:
       - mailserver
 
+  c2app:
+    image: timovdk/c2app:0.1.0
+    depends_on:
+      - broker
+      - schema_registry
+    ports:
+      - 3001:3001
+    environment:
+      KAFKA_HOST: broker:9092
+      SCHEMA_REGISTRY: http://schema_registry:3502
+      PORT: 3001
+      SERVER: http://localhost:3001
+      DISPERSION_SERVICE: https://assistance.hex.tno.nl/dispersionservice
+
   mailgateway:
-    image: drivereu/driver-mailgateway
+    image: drivereu/driver-mailgateway:latest
     container_name: mailgateway
     ports:
       # websocket notifications
@@ -332,11 +364,11 @@ services:
       # REST api
       - "7891:7891"
     environment:
-      - ApiMailServerUrl=http://10.5.0.5:3000
+      - ApiMailServerUrl=http://dockermail:3000/mailapi
       - LargeFileServiceUrl=http://large_file_service:9090/upload
-      - SmtpHost=10.5.0.5
+      - SmtpHost=dockermail
       - SmtpPort=25
-      - IMapHost=10.5.0.5
+      - IMapHost=dockermail
       - IMapPort=993
       - kafka_kafkaHost=broker:9092
       - kafka_schemaRegistryUrl=schema_registry:3502
@@ -348,26 +380,15 @@ services:
       - broker
       - large_file_service
       - schema_registry
-    networks:
-      static-network:
-        ipv4_address: 10.5.0.10
-      default:
     restart: always
 
   mailmonitor:
-    image: drivereu/driver-mailmonitor
+    image: drivereu/driver-mailmonitor:latest
     container_name: mailmonitor
-    ports:
-      - "4200:4200"
     links:
       - mailgateway
     depends_on:
       - mailgateway
-    networks:
-      static-network:
-        ipv4_address: 10.5.0.11
-      default:
-      backend:
     restart: always
 
 volumes:
@@ -379,13 +400,3 @@ volumes:
     driver: local
   trial-data:
   certs:
-
-networks:
-  static-network:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 10.5.0.0/16
-          gateway: 10.5.0.1
-  backend:
-    driver: bridge
